--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
     sdk: flutter
   audioplayers: ^6.0.0
 
+  flutter_gen: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
